--- a/app/src/main/res/layout/city_item.xml
+++ b/app/src/main/res/layout/city_item.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="1dp"
+    android:background="@color/itemBackground"
     android:minHeight="@dimen/city_item_min_height"
     android:orientation="vertical"
     app:layout_constraintLeft_toLeftOf="parent"
