--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#003a70</color>
     <color name="colorPrimaryDark">#00294E</color>
     <color name="colorAccent">#00ade9</color>
+    <color name="colorBackground">#FEFEFE</color>
+    <color name="itemBackground">#FFFFFF</color>
+
 </resources>
