feature(weatherpage): #2 Add API to get City weather - Refactor View Model class - Add Progress bar fir city weather page

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TextTitle">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textSize">@dimen/city_title_text</item>
+    </style>
+
 </resources>
