--- a/app/src/main/res/layout/home_page_fragment.xml
+++ b/app/src/main/res/layout/home_page_fragment.xml
@@ -11,13 +11,12 @@
 
     <TextView
         android:id="@+id/appTitleTextView"
+        style="@style/TextTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_l"
         android:gravity="center"
         android:text="@string/app_title"
-        android:textColor="@color/colorAccent"
-        android:textSize="@dimen/main_app_title_text"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
