--- a/app/src/main/res/layout/weather_fragment.xml
+++ b/app/src/main/res/layout/weather_fragment.xml
@@ -15,21 +15,32 @@
 
         <TextView
             android:id="@+id/cityWeatherCityNameText"
+            style="@style/TextTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="@dimen/city_title_text"
             app:layout_constraintTop_toTopOf="@id/cityWeatherToolbar"
             tools:text="City Name" />
 
     </androidx.appcompat.widget.Toolbar>
 
 
-    <ImageView
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:id="@+id/cityWeatherProgressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/cityWeatherImage"
         android:layout_width="@dimen/city_weather_icon_size"
         android:layout_height="@dimen/city_weather_icon_size"
         android:layout_margin="@dimen/margin_s"
+        android:scaleType="centerInside"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cityWeatherToolbar"
@@ -60,9 +71,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/city_weather_humidity_text"
+        app:layout_constraintBottom_toBottomOf="@id/cityWeatherTemperatureText"
         app:layout_constraintLeft_toRightOf="@id/cityWeatherTemperatureText"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cityWeatherDescriptionText"
+        app:layout_constraintTop_toTopOf="@id/cityWeatherTemperatureText"
         tools:text="@string/city_weather_humidity" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
