feature(homepage): #4 Adapt RecyclerView to display history items

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#00ade9</color>
     <color name="colorBackground">#FEFEFE</color>
     <color name="itemBackground">#FFFFFF</color>
+    <color name="cityListSectionText">@color/colorPrimaryDark</color>
 
 </resources>
