--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,6 +13,7 @@
     <dimen name="city_title_text">32sp</dimen>
     <dimen name="city_weather_temperature_text">50sp</dimen>
     <dimen name="city_weather_humidity_text">26sp</dimen>
+    <dimen name="city_list_section_text">14sp</dimen>
 
     <!-- Recycler view item -->
     <dimen name="item_height">40dp</dimen>
