--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="colorBackground">#FEFEFE</color>
     <color name="itemBackground">#FFFFFF</color>
     <color name="cityListSectionText">@color/colorPrimaryDark</color>
+    <color name="lightGray">#BBBBBB</color>
+    <color name="darkGray">#4B4B4B</color>
 
 </resources>
