--- a/app/src/main/res/layout/home_page_fragment.xml
+++ b/app/src/main/res/layout/home_page_fragment.xml
@@ -5,7 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
     android:padding="@dimen/margin_m"
     tools:context=".ui.home.HomePageFragment">
 
@@ -34,8 +33,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cityResultRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="@dimen/margin_m"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/citySearchEditText" />
