--- a/app/src/main/res/layout/weather_fragment.xml
+++ b/app/src/main/res/layout/weather_fragment.xml
@@ -4,20 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusable="true"
     tools:context=".ui.weather.WeatherFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/cityWeatherToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elevation="2dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/cityWeatherCityNameText"
-            style="@style/TextTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/toolbar_title_text"
             app:layout_constraintTop_toTopOf="@id/cityWeatherToolbar"
             tools:text="City Name" />
 
@@ -29,17 +33,18 @@
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="@dimen/margin_m"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/cityWeatherToolbar" />
 
     <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/cityWeatherImage"
         android:layout_width="@dimen/city_weather_icon_size"
         android:layout_height="@dimen/city_weather_icon_size"
-        android:layout_margin="@dimen/margin_s"
-        android:scaleType="centerInside"
+        android:layout_margin="@dimen/margin_m"
+        android:scaleType="centerCrop"
+        android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cityWeatherToolbar"
@@ -49,7 +54,10 @@
         android:id="@+id/cityWeatherDescriptionText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_m"
         android:paddingBottom="@dimen/margin_l"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="@dimen/city_weather_description"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cityWeatherImage"
@@ -59,6 +67,7 @@
         android:id="@+id/cityWeatherTemperatureText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="@dimen/city_weather_temperature_text"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/cityWeatherHumidityText"
@@ -69,6 +78,7 @@
         android:id="@+id/cityWeatherHumidityText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="@dimen/city_weather_humidity_text"
         app:layout_constraintBottom_toBottomOf="@id/cityWeatherTemperatureText"
         app:layout_constraintLeft_toRightOf="@id/cityWeatherTemperatureText"
