--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,9 +9,15 @@
         <item name="android:background">@color/colorBackground</item>
     </style>
 
+    <style name="ToolbarTitle">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textSize">@dimen/toolbar_title_text</item>
+    </style>
+
+
     <style name="TextTitle">
         <item name="android:textColor">@color/colorAccent</item>
-        <item name="android:textSize">@dimen/city_title_text</item>
+        <item name="android:textSize">@dimen/main_app_title_text</item>
     </style>
 
     <style name="CityListSectionTitle">
@@ -19,5 +25,6 @@
         <item name="android:textSize">@dimen/city_list_section_text</item>
         <item name="android:textAllCaps">true</item>
     </style>
+
 
 </resources>
